--- a/Frontend/src/globals.css
+++ b/Frontend/src/globals.css
@@ -7,3 +7,7 @@
   -ms-overflow-style: none; /* IE/Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.str-video__participant-tile--local {
+  display: none !important;
+}
